# yral_assignment

./: .gitignore  Cargo.toml  README.md  dfx.json
src/todo_crud_backend/: Cargo.toml  todo_crud_backend.did
src/todo_crud_backend/src/: error.rs  lib.rs  test_canister_api.py  types.rs
src/todo_crud_backend/src/handlers/: mod.rs  rest_endpoint_handlers.rs
src/todo_crud_backend/src/responses/: mod.rs
