[package]
name = "todo_crud_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ic-http-certification = "3.0.3"
regex = "1.11.1"
ic-stable-structures = "0.7.0"
